# Course-work

./: CMakeLists.txt  Doxyfile
forms/: administrator_choose.ui  autorization.ui  mainwindow.ui  trainers_choose.ui  users_choose.ui
include/: administrator_choose.h  autorization.h  connect_data_base.h  dinamic_items.h  dynamic_combobox.h  dynamic_item.h  dynamic_layout.h  mainwindow.h  trainers_choose.h  users_choose.h
src/: administrator_choose.cpp  autorization.cpp  connect_data_base.cpp  dinamic_items.cpp  dynamic_combobox.cpp  dynamic_item.cpp  dynamic_layout.cpp  main.cpp  mainwindow.cpp  trainers_choose.cpp  users_choose.cpp
src/src/: moscomsport.db
